--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
         "jquery": "^3.4.0",
         "multer": "^1.4.1",
         "toastr": "^2.1.4",
-        "web3": "^1.0.0-beta.46"
+        "web3": "^1.7.1"
     }
 }
